# cotescore

./: .gitignore  LICENSE  README.md  README_DEV.md  metrics_exploration.ipynb  pyproject.toml
.github/workflows/: tests.yml
benchmarks/: __init__.py  runner.py
cot_score/: __init__.py  _core.py  adapters.py  class_metrics.py  dataset.py  map_metric.py  metrics.py  ssu_tagger.py  types.py  visualisation.py
cotescore/: __init__.py  _core.py  adapters.py  class_metrics.py  dataset.py  metrics.py  types.py  visualisation.py
data/ncse/: ncse_testset_bboxes.csv
docs/: PIPELINE.md
docs/superpowers/plans/: 2026-03-22-spiritualist-inference-pipeline.md
docs/superpowers/specs/: 2026-03-22-spiritualist-inference-pipeline-design.md
experiments/: easyocr_gpu_gt_only.yaml  easyocr_gt_only.yaml  paddleocr_gpu_gt_only.yaml  paddleocr_gt_only.yaml  tesseract_gt_and_yolo.yaml  tesseract_gt_only.yaml  trocr_gpu_gt_only.yaml  trocr_gt_only.yaml
models/: __init__.py  doclayout_yolo.py  docling_heron.py  layoutlmv3.py  loader.py  pp_doclayout.py
notebooks/: analysing_results.py  limerick_analysis.py  limerick_analysis_with_cdd.py  metrics_exploration.py  ncse_prediction_visualisation.py
pipeline/: config.py  runner.py
pipeline/dofns/: io.py  ocr.py  transforms.py
pipeline/ocr_models/: base.py  easyocr.py  paddleocr.py  tesseract.py  trocr.py
scripts/: CDD_experiment.py  benchmark_all.py  benchmark_doclaynet.py  benchmark_hnla2013.py  benchmark_metrics.py  benchmark_ncse.py  benchmark_spiritualist.py  convert_tiff_to_png.py  count_doclaynet_boxes.py  count_hnla2013_boxes.py  create_bbox_example.py  download_dataset.py  evaluate.py  evaluation_script.py  export_predictions.py  line_vs_para.py  run_experiment.py  tag_ssu.py  visualize_hnla_ssu.py  visualize_metrics.py  visualize_predictions.py  visualize_predictions_hnla2013.py
src/cotescore/: __init__.py  _core.py  _distributions.py  adapters.py  alto_ssu_tagger.py  class_metrics.py  dataset.py  layout.py  metrics.py  ocr.py  ssu_tagger.py  types.py  visualisation.py
tests/: __init__.py  reference_metrics.py  test_alto_ssu_tagger.py  test_benchmarks.py  test_class_metrics.py  test_dataset.py  test_map_metric.py  test_metrics.py  test_models.py  test_ocr.py  test_pipeline_config.py  test_pipeline_io.py  test_pipeline_ocr.py  test_pipeline_transforms.py  test_ssu_tagger.py  test_visualisation.py
