[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cot-score"
version = "0.1.0"
description = "Coverage and Overlap, Trespass and Excess (COTe) Testing for Document Layout Analysis"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Jonathan Bourne", email = "jonathan.s.bourne@gmail.com"},
    {name = "Mwiza Simbeye", email = "mwiza.simbeye@boweryintelligence.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "pillow>=9.0.0",
    "datasets>=2.0.0",
    "huggingface-hub>=0.16.0",
    "evaluate>=0.4.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "isort>=5.12.0",
]

models = [
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "detectron2",
]

[project.urls]
Homepage = "https://github.com/yourusername/cot_analysis"
Repository = "https://github.com/yourusername/cot_analysis"

[tool.setuptools]
packages = ["cot_score", "models", "benchmarks"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=cot_score --cov=models --cov=benchmarks --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
